package budgetflow.command;

public enum CommandType {
    CREATE,
    READ,
    UPDATE,
    DELETE,
    EXIT,
    COMPARE
}
