@startuml
hide circle
skinparam classAttributeIconSize 0

package command {
    class "{abstract} \n Command" {
        - input: String
        - commandType: CommandType
        - outputMessage: String
        + Command(String input)
        + execute(List<Income> incomes, ExpenseList expenseList): void
    }

    class "FilterIncomeByDateCommand" {
        - {static} logger: Logger
        - {static} COMMAND_PREFIX: String
        + FilterIncomeByDateCommand(String input)
        + execute(List<Income> incomes, ExpenseList expenseList) throws FinanceException
    }

    "FilterIncomeByDateCommand" --|> "{abstract} \n Command"
}


    class "FinanceException"



    class ExpenseList



    class Income {
        + getDate(): String
        + getCategory(): String
        + getAmount(): double
    }



    class DateValidator {
        + static boolean isValidDate(String date)
        + static getFullDateFormatter(): java.time.format.DateTimeFormatter
    }


package java.util {
    interface List
}

package java.util.logging {
    class Logger
}

enum CommandType {
    READ
    // Other command types...
}

"FilterIncomeByDateCommand" ..> "FinanceException" : throws
"FilterIncomeByDateCommand" ..> "Income" : uses
"FilterIncomeByDateCommand" ..> "ExpenseList" : uses
"FilterIncomeByDateCommand" ..> "Logger" : uses
"FilterIncomeByDateCommand" ..> "DateValidator" : uses
"FilterIncomeByDateCommand" ..> "LocalDate" : uses
@enduml